aKregator ChangeLog
===================
(c) 2004 the aKregator authors.

Changes after 1.0b7:
-----------------------------

New features:
       - Add icon to konqueror to show if page has a feed -tpr
#85532 - Add feed summary -tpr

Changes:
       - Added possibility to set article status (read/unread/new) manually -fo
       - Added basic "keep flag" support to prevent articles from expiring -fo
       - Add pageviewer actions into Go menu and print to file menu when in pageviewer mode -tpr
       - improve tabbed browsing: added back/forward buttons, improved context menus - fo
       - make search bar optional -fo
       - Do not allow user to stop feedlist loading to avoid data loss -tpr
       - Do not show feedlist url in title -tpr
       - Clear the statusbar when pressing Stop button -tpr

Bug fixes:
       - save and restore open/close state of feed groups -fo
       - Use isNull() instead of comparing to QString::null -tpr
       - Make kontact plugin work with Kontact from CVS HEAD -fo
       - Don't load kontact plugin when akregator is already running -fo
       - Fix expiry by age (global setting was ignored) -fo
       - Make trayicon and configure dialog available in kontact -fo
       - Save and restore open/closed state of feed groups -fo
       - Fix interval fetching (Exclude feeds with custom settings from global fetch) -fo
#84528 - Make session management to save and load feedlist when appropriate -tpr
#88437 - Show credits on Kontact's about dialog -tpr
#91660 - Don't crash on exit when internal browser widgets are opened or the article viewer is loading -fo
#93739 - Fix Alignment of text body for right-to-left scripts -fo


Changes after 1.0b6:
-----------------------------
New features:

Changes:

#84133,
#85691 - added KMail-like key bindings -fo
       - Advanced archive options: Limit article number, disable archive -fo
       - Add "Fetch All Feeds" into context menu of trayicon -tpr